# Contextualizer

./: .gitignore  AGENT_INTEGRATION_PLAN.md  CLAUDE.md  COMPLETE_SYSTEM_FLOW.md  CRON_HANDLER_ROADMAP.md  Contextualizer.sln  Contextualizer_Company_Guide.html  HANDLER_MCP_TOOLS_IMPLEMENTATION_PLAN.txt  IT_README.md  NetworkUpdateService.cs  PORTABLE_SETUP.md  README.md  TAB_AND_WINDOW_FOCUS_GUIDE.md  WPF_UI_IMPROVEMENTS.md  ai_agent_integration_guide.md  ai_ui_experiments.md  build-release.ps1  cleanup-webview2.ps1  contextualizer-system-flow.md  contextualizer-user-guide.md  contextualizer_project_guide.md  cron_examples.json  enhanced-logging-examples.md  enhanced-logging-improvements-summary.md  example-auto-focus-handler.json  example-version.json  function_test_complete.md  handlers.json  handlers.local.json  install_update.bat  logging-system-summary.md  logging-usage-guidelines.md  pipeline_test_arrays.md  pipeline_test_cases.md  pipeline_test_final.md  pipeline_test_json_fix.md  pipeline_test_simple.md  plugin_development_guide.md  prepare-network-update.ps1  quick-test-setup.ps1  (+5 more)
contextualizer-tauri/src-tauri/: Cargo.toml  tauri.conf.json
contextualizer-tauri/src-tauri/capabilities/: default.json
contextualizer-tauri/src-tauri/src/: commands.rs  error.rs  events.rs  lib.rs  main.rs  state.rs
contextualizer-tauri/src-tauri/src/ai/: agui_events.rs  agui_server.rs  mod.rs  provider.rs
contextualizer-tauri/src-tauri/src/capture/: clipboard.rs  mod.rs  shortcut.rs
contextualizer-tauri/src-tauri/test_fixtures/: handlers.json  sample_lookup.txt
(+567 files in other folders)
